--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -208,33 +208,52 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal"
+                android:weightSum="3">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/back_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/colorBackground"
-                    app:icon="@drawable/ic_arrow_back"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:stateListAnimator="@null"
+                    app:cornerRadius="20dp"
+                    app:elevation="0dp"
+                    app:icon="@drawable/arrow_back"
+                    app:iconGravity="textStart"
                     app:iconTint="@color/colorPrimaryDark" />
 
                 <TextView
                     android:id="@+id/pages_number"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="TextView" />
+                    android:elevation="0dp"
+                    android:gravity="center"
+                    android:text="1/10"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/next_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/colorBackground"
-                    app:icon="@drawable/ic_arrow_back"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:stateListAnimator="@null"
+                    app:cornerRadius="20dp"
+                    app:elevation="0dp"
+                    app:icon="@drawable/arrow_next"
+                    app:iconGravity="textEnd"
                     app:iconTint="@color/colorPrimaryDark" />
+
             </LinearLayout>
 
 
