--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -194,7 +194,7 @@
                         app:layout_constraintStart_toStartOf="parent" />
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/filtro_botao"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="4dp"
