--- a/app/src/main/res/layout/card_travel.xml
+++ b/app/src/main/res/layout/card_travel.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
+    android:background="@color/colorBackground"
+    android:backgroundTint="@color/colorBackground"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:strokeColor="@color/colorSecondary"
@@ -20,7 +22,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="3"
             android:orientation="vertical">
 
             <LinearLayout
@@ -102,11 +104,13 @@
                 android:id="@+id/textView28"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="17dp"
+                android:layout_marginEnd="32dp"
                 android:text="Pontos"
                 android:textColor="@color/textColorSecondary"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView32" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
