--- a/app/src/main/res/layout/fragment_analyzed_travels.xml
+++ b/app/src/main/res/layout/fragment_analyzed_travels.xml
@@ -9,5 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/analyzed_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:itemCount="4"
+        tools:listitem="@layout/card_travel" />
 </FrameLayout>
