--- a/app/src/main/res/layout/fragment_pending_travels.xml
+++ b/app/src/main/res/layout/fragment_pending_travels.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.travel.pending_travels.PendingTravels">
+    tools:context=".ui.travel.analyzed_travels.AnalyzedTravels">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pending_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        tools:itemCount="4"
+        tools:listitem="@layout/card_travel" />
 </FrameLayout>
