--- a/app/src/main/res/layout/fragment_pending_travels.xml
+++ b/app/src/main/res/layout/fragment_pending_travels.xml
@@ -12,4 +12,15 @@
         android:layout_height="match_parent"
         tools:itemCount="4"
         tools:listitem="@layout/card_travel" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/colorTertiary"
+        android:progressBackgroundTint="@color/colorTertiary"
+        android:visibility="gone"
+        tools:visibility="visible" />
 </FrameLayout>
