--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -8,77 +8,71 @@
     tools:context=".ui.dash.DashFragment">
 
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:background="@color/colorBackground"
+        android:backgroundTint="@color/colorBackground"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorBackground"
-            android:backgroundTint="@color/colorBackground"
-            android:orientation="vertical">
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/titulo_poppins_regular"
+            android:text="Registros de Viagem:"
+            android:textColor="@color/textColorPrimary"
+            android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Clique para ver mais sobre a viagem"
+            android:textColor="@color/textColorSecondary"
+            android:textSize="16sp" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_travels"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="16dp"
+            android:backgroundTint="#43616D6F"
+            app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:tabTextColor="@color/colorPrimaryDark">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="@font/titulo_poppins_regular"
-                android:text="Registros de Viagem:"
-                android:textColor="@color/textColorPrimary"
-                android:textSize="24sp" />
+                android:icon="@drawable/icon_analisadas"
 
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="match_parent"
+                android:text="Analisadas" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:text="Clique para ver mais sobre a viagem"
-                android:textColor="@color/textColorSecondary"
-                android:textSize="16sp" />
+                android:icon="@drawable/icon_pendentes"
+                android:text="Pendentes" />
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_travels"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginRight="16dp"
-                android:backgroundTint="#43616D6F"
-                app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:tabTextColor="@color/colorPrimaryDark">
+        </com.google.android.material.tabs.TabLayout>
 
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:icon="@drawable/icon_analisadas"
-
-                    android:text="Analisadas" />
-
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:icon="@drawable/icon_pendentes"
-                    android:text="Pendentes" />
-
-            </com.google.android.material.tabs.TabLayout>
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/pages_travels"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp" />
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pages_travels"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_weight="1" />
 
 
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </FrameLayout>
